--- a/style.css
+++ b/style.css
@@ -9,23 +9,22 @@
     scroll-behavior: smooth;
 }
 
-
 body {
     overflow-x: hidden;
     min-height: 100vh;
 }
 
 #header {
-    position: absolute;
+    position: sticky;
     top: 0;
     left: 0;
     width: 100%;
-    padding: 30px 30px;
+    padding: 20px 30px;
     display: flex;
     justify-content: space-between;
     align-items: center;
     z-index: 100;
-    
+    background-color: rgb(29, 29, 29);
 }
 
 #header ul {
@@ -49,9 +48,7 @@ body {
 
 #header ul li a:hover,
 #header ul li a.active {
-    background: #d35d02;
-    color: white;
-    border-radius: 20px;
+    color: #d35d02;
 }
 
 section {
@@ -76,12 +73,14 @@ section::before {
 
 section #text {
     position: absolute;
+    margin-bottom: 100px;
     font-family: 'Poppins';
     z-index: 10;
     color: white;
     font-size: 4vw;
     text-align: center;
     line-height: 1.5em
+    
 }
 
 section img {
@@ -108,9 +107,123 @@ section img {
     transform: translateY(150px);
     font-family: 'Poppins';
     z-index: 10;
+    margin-bottom: 100px;
 }
 
-.about {
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    scroll-behavior: smooth;
+}
+
+body {
+    overflow-x: hidden;
+    min-height: 100vh;
+}
+
+#header {
+    position: sticky;
+    top: 0;
+    left: 0;
+    width: 100%;
+    padding: 20px 30px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    z-index: 100;
+    background-color: rgb(29, 29, 29);
+}
+
+#header ul {
+    display : flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#header ul li {
+    list-style: none;
+    margin-left: 20px;
+}
+
+#header ul li a {
+    text-decoration: none;
+    padding: 5px 15px;
+    font-size: 1.2em;
+    font-family: 'Poppins';
+    color: white;
+}
+
+#header ul li a:hover,
+#header ul li a.active {
+    color: #d35d02;
+}
+
+.home {
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.home::before {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100px;
+    background: linear-gradient(to top, rgb(44, 44, 44), transparent);
+    z-index: 10;
+}
+
+.home #text {
+    position: absolute;
+    margin-bottom: 100px;
+    font-family: 'Poppins';
+    z-index: 10;
+    color: white;
+    font-size: 4vw;
+    text-align: center;
+    line-height: 1.5em
+    
+}
+
+.home img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    pointer-events: none;
+    z-index: 9;
+}
+
+#btn-home {
+    text-decoration: none;
+    display: inline-block;
+    padding: 8px 30px;
+    background: white;
+    color: #d35d02;
+    border-radius: 20px;
+    font-size: 1.2em;
+    font-weight: 500;
+    letter-spacing: 2px;
+    transform: translateY(150px);
+    font-family: 'Poppins';
+    z-index: 10;
+    margin-bottom: 100px;
+}
+
+#btn-home:hover {
+    background: #d35d02;
+    color: white;
+}
+
+#about {
     position: relative;
     padding: 100px;
     background-position: 50%;
@@ -123,7 +236,7 @@ section img {
     background-color: rgb(44, 44, 44);
 }
 
-.about h2 {
+.about h1 {
     font-size: 3.5em;
     color: #ff750b;
     margin-bottom: 40px;
@@ -137,4 +250,121 @@ section img {
     font-family: 'Poppins';
     font-weight: 400;
     text-align: left
+}
+
+.destination {
+    position: relative;
+    padding: 100px;
+    background-position: 50%;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    min-height: 100vh;
+    pointer-events: none;
+    z-index: 11;
+    background-color: rgb(44, 44, 44);
+}
+
+.destination h1 {
+    font-size: 3.5em;
+    color: #ff750b;
+    font-family: 'Poppins';
+    margin-bottom: 40px;
+}
+
+.guide {
+    position: relative;
+    padding: 100px;
+    background-position: 50%;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    min-height: 100vh;
+    pointer-events: none;
+    z-index: 11;
+    background-color: rgb(44, 44, 44);
+}
+
+.guide h1 {
+    font-size: 3.5em;
+    color: #ff750b;
+    font-family: 'Poppins';
+    margin-bottom: 40px;
+    line-height: 1em;
+}
+
+.guide h2 {
+    font-family: 'Poppins';
+    color: white;
+    font-weight: 300;
+    font-size: 1.2em;
+    margin-top: -20px;
+}
+
+.other {
+    background-color: #ff750b;
+}
+
+@media (max-width: 768px) {
+    #header {
+        padding: 10px 15px;
+    }
+    
+    #header ul li {
+        margin-left: 10px;
+    }
+    
+    #header ul li a {
+        font-size: 1em;
+    }
+    
+    section #text {
+        font-size: 3vw;
+        margin-bottom: 50px;
+    }
+    
+    #btn-home {
+        font-size: 1em;
+        transform: translateY(100px);
+    }
+    
+    .about h1, .destination h1, .guide h1 {
+        font-size: 2.5em;
+    }
+    
+    .about p, .guide h2 {
+        font-size: 1em;
+    }
+}
+
+@media (max-width: 480px) {
+    #header {
+        padding: 10px 10px;
+    }
+    
+    #header ul li {
+        margin-left: 5px;
+    }
+    
+    #header ul li a {
+        font-size: 0.9em;
+    }
+    
+    section #text {
+        font-size: 2.5vw;
+        margin-bottom: 40px;
+    }
+    
+    #btn-home {
+        font-size: 0.9em;
+        transform: translateY(80px);
+    }
+    
+    .about h1, .destination h1, .guide h1 {
+        font-size: 2em;
+    }
+    
+    .about p, .guide h2 {
+        font-size: 0.9em;
+    }
 }
